--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style2.css" />
   </head>
 
   <body>
@@ -319,15 +319,16 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/series-label.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <!-- Axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../models/product.js"></script>
-    <script src="../services/productAPI.js"></script>
+    <script src="/app/controllers/validator.js"></script>
+    <script src="/app/models/product.js"></script>
+    <script src="/app/services/productAPI.js"></script>
 
-    <script src="../controllers/main.js"></script>
-    <script src="../controllers/validator.js"></script>
+    <script src="/app/controllers/main.js"></script>
   </body>
 </html>
