--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/style.css">
+
   </head>
   <body>
     <div class="img-yellow">
@@ -49,7 +50,7 @@
               <a href="#">Courses</a>
               <a href="#">Blog</a>
               <a href="#">Shop</a>
-              <a href="#">Elements</a>
+              <a href="index2.html">Elements</a>
             </div>
             <div class="contact-socials">
               <button>
@@ -383,10 +384,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./js/style.js"></script>
-    <script src="./app/models/product.js"></script>
-    <script src="./app/services/productAPI.js"></script>
-    <script src="./app/controllers/main2.js"></script>
-    <script src="./app/controllers/main.js"></script>
+    <script src="/app/controllers/style.js"></script>
+    <script src="/app/models/product.js"></script>
+    <script src="/app/services/productAPI.js"></script>
+    <script src="/app/controllers/main2.js"></script>
   </body>
 </html>
