--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
   </head>
   <body>
@@ -384,9 +384,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/app/controllers/style.js"></script>
-    <script src="/app/models/product.js"></script>
-    <script src="/app/services/productAPI.js"></script>
-    <script src="/app/controllers/main2.js"></script>
+    <script src="./app/controllers/style.js"></script>
+    <script src="./app/models/product.js"></script>
+    <script src="./app/services/productAPI.js"></script>
+    <script src="./app/controllers/main2.js"></script>
   </body>
 </html>
