--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/style2.css" />
+    <link rel="stylesheet" href="style2.css" />
   </head>
 
   <body>
@@ -34,7 +34,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
@@ -325,10 +325,10 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <!-- Axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/app/controllers/validator.js"></script>
-    <script src="/app/models/product.js"></script>
-    <script src="/app/services/productAPI.js"></script>
+    <script src="./app/controllers/validator.js"></script>
+    <script src="./app/models/product.js"></script>
+    <script src="./app/services/productAPI.js"></script>
 
-    <script src="/app/controllers/main.js"></script>
+    <script src="./app/controllers/main.js"></script>
   </body>
 </html>
